--- a/technical-test-renderer/src/main/resources/application.yml
+++ b/technical-test-renderer/src/main/resources/application.yml
@@ -1,6 +1,8 @@
 spring:
   application:
     name: technical-test-renderer
-
+  freemarker:
+    checkTemplateLocation: false
 server:
   port: 8081
+
